include/ishtar.rs

#[test]
fn bindgen_test_layout_ishtar_method_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_method_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_method_t>(),
        120usize,
        concat!("Size of: ", stringify!(ishtar_method_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_method_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_method_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._self) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_t),
            "::",
            stringify!(_self)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).header) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_t),
            "::",
            stringify!(header)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).p_i_info) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_t),
            "::",
            stringify!(p_i_info)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).vtable_offset) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_t),
            "::",
            stringify!(vtable_offset)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._name) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_t),
            "::",
            stringify!(_name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._raw_name) as usize - ptr as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_t),
            "::",
            stringify!(_raw_name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr)._ctor_called) as usize - ptr as usize },
        88usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_t),
            "::",
            stringify!(_ctor_called)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).flags) as usize - ptr as usize },
        92usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_t),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).owner) as usize - ptr as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_t),
            "::",
            stringify!(owner)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).aspects) as usize - ptr as usize },
        104usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_t),
            "::",
            stringify!(aspects)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).signature) as usize - ptr as usize },
        112usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_method_t),
            "::",
            stringify!(signature)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_callframe_exception_t {
    pub last_ip: *mut ::std::os::raw::c_void,
    pub value: *mut ishtar_object_t,
    pub stack_trace: *mut ishtar_string_t,
}
#[test]
fn bindgen_test_layout_ishtar_callframe_exception_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_callframe_exception_t> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_callframe_exception_t>(),
        24usize,
        concat!("Size of: ", stringify!(ishtar_callframe_exception_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_callframe_exception_t>(),
        8usize,
        concat!("Alignment of ", stringify!(ishtar_callframe_exception_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).last_ip) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_callframe_exception_t),
            "::",
            stringify!(last_ip)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).value) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_callframe_exception_t),
            "::",
            stringify!(value)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).stack_trace) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_callframe_exception_t),
            "::",
            stringify!(stack_trace)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct call_frame_t {
    pub self_: *mut call_frame_t,
    pub parent: *mut call_frame_t,
    pub method: *mut ishtar_method_t,
    pub level: i32,
    pub return_value: *mut ::std::os::raw::c_void,
    pub args: *mut ::std::os::raw::c_void,
    pub last_ip: ishtar_opcode_e,
    pub exception: ishtar_callframe_exception_t,
}
#[test]
fn bindgen_test_layout_call_frame_t() {
    const UNINIT: ::std::mem::MaybeUninit<call_frame_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<call_frame_t>(),
        80usize,
        concat!("Size of: ", stringify!(call_frame_t))
    );
    assert_eq!(
        ::std::mem::align_of::<call_frame_t>(),
        8usize,
        concat!("Alignment of ", stringify!(call_frame_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).self_) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(call_frame_t),
            "::",
            stringify!(self_)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).parent) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(call_frame_t),
            "::",
            stringify!(parent)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).method) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(call_frame_t),
            "::",
            stringify!(method)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).level) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(call_frame_t),
            "::",
            stringify!(level)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).return_value) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(call_frame_t),
            "::",
            stringify!(return_value)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).args) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(call_frame_t),
            "::",
            stringify!(args)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).last_ip) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(call_frame_t),
            "::",
            stringify!(last_ip)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).exception) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(call_frame_t),
            "::",
            stringify!(exception)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_illabel_t {
    pub pos: i32,
    pub opcode: ishtar_opcode_e,
}
#[test]
fn bindgen_test_layout_ishtar_illabel_t() {
    const UNINIT: ::std::mem::MaybeUninit<ishtar_illabel_t> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ishtar_illabel_t>(),
        8usize,
        concat!("Size of: ", stringify!(ishtar_illabel_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ishtar_illabel_t>(),
        4usize,
        concat!("Alignment of ", stringify!(ishtar_illabel_t))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).pos) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_illabel_t),
            "::",
            stringify!(pos)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).opcode) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(ishtar_illabel_t),
            "::",
            stringify!(opcode)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ishtar_types_t {
    pub object_class: *mut ishtar_class_t,
    pub value_type_class: *mut ishtar_class_t,
    pub void_class: *mut ishtar_class_t,
    pub string_class: *mut ishtar_class_t,
    pub byte_class: *mut ishtar_class_t,
    pub s_byte_class: *mut ishtar_class_t,
    pub int32_class: *mut ishtar_class_t,
    pub int16_class: *mut ishtar_class_t,
    pub int64_class: *mut ishtar_class_t,
    pub u_int32_class: *mut ishtar_class_t,
    pub u_int16_class: *mut ishtar_class_t,
    pub u_int64_class: *mut ishtar_class_t,
    pub half_class: *mut ishtar_class_t,
    pub float_class: *mut ishtar_class_t,
    pub double_class: *mut ishtar_class_t,
    pub decimal_class: *mut ishtar_class_t,
    pub bool_class: *mut ishtar_class_t,
    pub char_class: *mut ishtar_class_t,
    pub array_class: *mut ishtar_class_t,
    pub exception_class: *mut ishtar_class_t,
    pub raw_class: *mut ishtar_class_t,
    pub aspect_class: *mut ishtar_class_t,
    pub function_class: *mut ishtar_class_t,
    pub range_class: *mut ishtar_class_t,
    pub all: *mut ::std::os::raw::c_void,
    pub mapping: *mut ::std::os::raw::c_void,
}
